--- a/header/header.css
+++ b/header/header.css
@@ -1,16 +1,20 @@
 .header {
     position: absolute;
     top: 0;
-    /* min-height: 90px; */
     width: 100%;
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
     background-color: #181818;
-
 }
-
+@media(max-width: 576px) {
+    .header {
+        height: 46px;
+        padding: 0 17px;
+    }
+}
 .header__container {
     display: flex;
     justify-content: space-between;
+    height: inherit;
     padding: 0;
 }
 
@@ -25,6 +29,11 @@
 @media(max-width:1074px) {
     .header__subwrap-right {
         padding: 0;
+    }
+}
+@media(max-width: 576px) {
+    .header__subwrap-right {
+        display: none;
     }
 }
 
@@ -88,13 +97,20 @@
 
 .header__wrap-burger {
     display: none;
-    align-self: center;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
     padding: 13px 0 0 0;
 }
 
 @media(max-width:1074px) {
     .header__wrap-burger {
-        display: block;
+        display: flex;
+    }
+}
+@media(max-width: 576px) {
+    .header__wrap-burger {
+        padding: 9px 0 0 0;
     }
 }
 
@@ -106,7 +122,7 @@
     position: relative;
     width: 24px;
     height: 2.67px;
-    background: #DADADA;
+    background: #797979;
 }
 
 .burger__line::before,
@@ -115,7 +131,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #DADADA;
+    background: #797979;
 
 }
 
@@ -126,4 +142,12 @@
 .burger__line::after {
     bottom: 16px;
 }
-@media(max-width: 768px) {}
+@media(max-width: 576px) {
+    .burger__line::before {
+        top: -4px;
+    }
+
+    .burger__line::after {
+        bottom: 8px;
+    }
+}
