--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,3 +7,8 @@
     font-family: "Roboto";
     src: url('/fonts/Roboto-Light.ttf') format('ttf');
 }
+
+@font-face {
+    font-family: "MerriweatherBold";
+    src: url('/fonts/Merriweather-Bold.ttf') format('ttf');
+}
