feat: fix respnonsive section-1

--- a/common/common.css
+++ b/common/common.css
@@ -7,6 +7,7 @@ body {
     box-sizing: content-box;
     max-width: 1200px;
     margin: 0px auto;
+    padding: 0 15px;
   }
   .wrap {
     position: relative;
@@ -31,10 +32,12 @@ body {
     width: 189px;
     height: 41px;
     border-radius: 20px;
+    padding: 2px 0 0px 0;
   }
   .mod-yellow-btn {
     font-family: 'MerriweatherBold';
     font-size: 14px;
+    font-weight: 600;
     letter-spacing: 10%;
     color:#0D0C11;
     background: radial-gradient(50% 50% at 50% 50%, #FFC700 0%, #FFC700 100%);
