--- a/header/header.css
+++ b/header/header.css
@@ -7,16 +7,18 @@
     z-index: 2;
     font-family: Roboto;
 }
+
 @media(max-width: 576px) {
     .header {
         height: 46px;
         padding: 0 17px;
     }
 }
+
 .header__container {
+    position: relative;
     display: flex;
     justify-content: space-between;
-    height: inherit;
     padding: 0;
 }
 
@@ -26,6 +28,8 @@
     align-items: center;
     height: 100%;
     padding: 0 55px 0 0;
+    transition-duration: 0.2s;
+
 }
 
 @media(max-width:1074px) {
@@ -33,6 +37,7 @@
         padding: 0;
     }
 }
+
 @media(max-width: 576px) {
     .header__subwrap-right {
         display: none;
@@ -99,20 +104,21 @@
 
 .header__wrap-burger {
     display: none;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     height: inherit;
-    padding: 13px 0 0 0;
+    padding: 35px 0 0 0;
 }
 
 @media(max-width:1074px) {
     .header__wrap-burger {
-        display: flex;
+        display: block;
     }
 }
+
 @media(max-width: 576px) {
     .header__wrap-burger {
-        padding: 9px 0 0 0;
+        padding: 17px 0 0 0;
     }
 }
 
@@ -125,31 +131,54 @@
     width: 24px;
     height: 2.67px;
     background: #797979;
+    transition-duration: 0.3s;
 }
 
-.burger__line::before,
-.burger__line::after {
-    content: '';
+.burger__line:nth-child(2) {
+    margin: 4px 0 4px 0;
+    transition-duration: 0.3s;
+}
+
+.burger__line:nth-child(3) {
+
+}
+
+
+.burger__navigation {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #797979;
-
+    top: -500%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
-
-.burger__line::before {
-    top: -8px;
+.burger__navigation-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
-
-.burger__line::after {
-    bottom: 16px;
+.burger__navigation-item {
 }
-@media(max-width: 576px) {
-    .burger__line::before {
-        top: -4px;
+.burger__navigation-item:not(:last-child) {
+    padding: 0 0 37px 0;
+}
+@media(max-width:400px) {
+    .burger__navigation-item {
+        padding: 0 0 27px 0;
     }
-
-    .burger__line::after {
-        bottom: 8px;
+}
+.burger__item {
+    font-size: 26px;
+    line-height: 22px;
+    color: #a1a09b;
+    text-transform: uppercase;
+}
+@media(max-width:400px) {
+    .burger__item {
+        font-size: 16px;
     }
+}
+
+._item-choice {
 }
