feat: implemet switch test mode

--- a/common/common.css
+++ b/common/common.css
@@ -42,6 +42,10 @@ body {
     color:#0D0C11;
     background: radial-gradient(50% 50% at 50% 50%, #FFC700 0%, #FFC700 100%);
   }
+  .mod-grey-btn {
+    box-shadow: 0px 4px 10px 0px #00000040 inset;
+    color:#8E8E8E;
+  }
 
  .mod-transparent-btn {
   border: 1px solid #FFFFFF;
@@ -55,6 +59,9 @@ body {
 
  .mod-choice {
   color: #F4CE0C !important;
+}
+.mod-dissapear {
+  display: none;
 }
 
  /* ---------------------------------- burger ------------------------------ */
