--- a/common/common.css
+++ b/common/common.css
@@ -109,3 +109,45 @@ body {
   width: 100%;
   height: 100%;
  }
+
+ .mod-container-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
+ .mod-square-plate {
+  display: flex;
+  flex-wrap: wrap;
+  width: 680px;
+ }
+ @media(max-width:1074px) {
+
+ }
+ .mod-square-size {
+  width: 175px;
+  height: 175px;
+  margin: 25px;
+ }
+ .mod-square-size:active {
+  border:6px solid #FFC700;
+  box-sizing: border-box;
+ }
+ @media(max-width:1074px) {
+  .mod-square-size {
+    width: 150px;
+    height: 150px;
+  }
+ }
+ @media(max-width:640px) {
+  .mod-square-size {
+    width: 110px;
+    height: 110px;
+  }
+ }
+ @media(max-width:576px) {
+  .mod-square-size {
+    width: 50px;
+    height: 50px;
+  }
+ }
